# simpleMath

./: .gitignore  CMakeLists.txt  README.md
include/: simpleMath.h
samples/: howto_simpleMath.cpp
src/: matrix.cpp  quaternion.cpp  vector.cpp
